// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicationsSelectAll > render unchecked if all publications are not part of the selection 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0"
    >
      <input
        class="ant-checkbox-input"
        data-testid="select-all-publications"
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelectAll > renders checked if all publications are part of the selection 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0 ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        data-testid="select-all-publications"
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelectAll > renders disabled 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0 ant-checkbox-disabled"
    >
      <input
        class="ant-checkbox-input"
        data-testid="select-all-publications"
        disabled=""
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;
